@@ -38,7 +38,7 @@
         <default>false</default>
         <locale name="C">
           <short>Capture pointer only if Shift is pressed</short>
-          <long>Whether if Shift must be pressed for the pointer to be captured while it's over the capture area. If this option is set as true, and a mouse button is set in the "capture_button" key, then the Shift key must be pressed while the mouse button is pressed.</long>
+          <long>Whether the Shift key must be pressed for the pointer to be captured while it's over the capture area. If this option is set as true, and a mouse button is set in the "capture_button" key, then the Shift key must be pressed while the mouse button is pressed.</long>
         </locale>
       </schema>
       <schema>
@@ -48,7 +48,7 @@
         <default>false</default>
         <locale name="C">
           <short>Capture pointer only if Alt is pressed</short>
-          <long>Whether if Alt must be pressed for the pointer to be captured while it's over the capture area. If this option is set as true, and a mouse button is set in the "capture_button" key, then the Alt key must be pressed while the mouse button is pressed.</long>
+          <long>Whether the Alt key must be pressed for the pointer to be captured while it's over the capture area. If this option is set as true, and a mouse button is set in the "capture_button" key, then the Alt key must be pressed while the mouse button is pressed.</long>
         </locale>
       </schema>
       <schema>
@@ -58,7 +58,7 @@
         <default>false</default>
         <locale name="C">
           <short>Capture pointer only if Ctrl is pressed</short>
-          <long>Whether if Ctrl must be pressed for the pointer to be captured while it's over the capture area. If this option is set as true, and a mouse button is set in the "capture_button" key, then the Ctrl key must be pressed while the mouse button is pressed.</long>
+          <long>Whether the Ctrl key must be pressed for the pointer to be captured while it's over the capture area. If this option is set as true, and a mouse button is set in the "capture_button" key, then the Ctrl key must be pressed while the mouse button is pressed.</long>
         </locale>
       </schema>
       <schema>
@@ -68,7 +68,7 @@
         <default>false</default>
         <locale name="C">
           <short>Release pointer only if Shift is pressed</short>
-          <long>Whether if the Shift key must be pressed with the mouse button set in "release_button" for the pointer to be released from the capture area.</long>
+          <long>Whether the Shift key must be pressed with the mouse button set in "release_button" for the pointer to be released from the capture area.</long>
         </locale>
       </schema>
       <schema>
@@ -78,7 +78,7 @@
         <default>false</default>
         <locale name="C">
           <short>Release pointer only if Alt is pressed</short>
-          <long>Whether if the Alt key must be pressed with the mouse button set in "release_button" for the pointer to be released from the capture area.</long>
+          <long>Whether the Alt key must be pressed with the mouse button set in "release_button" for the pointer to be released from the capture area.</long>
         </locale>
       </schema>
       <schema>
@@ -88,7 +88,7 @@
         <default>false</default>
         <locale name="C">
           <short>Release pointer only if Ctrl is pressed</short>
-          <long>Whether if the Ctrl key must be pressed with the mouse button set in "release_button" for the pointer to be released from the capture area.</long>
+          <long>Whether the Ctrl key must be pressed with the mouse button set in "release_button" for the pointer to be released from the capture area.</long>
         </locale>
       </schema>
     </schemalist>
